--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     compile group: 'org.testng', name: 'testng', version: '7.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
 
 test {
