--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile group: 'org.testng', name: 'testng', version: '7.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    compile "com.beust:jcommander:1.71"
 }
 
 test {
