Лекция 6.10. Описание конфигурации тестового стенд

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -18,6 +18,14 @@ dependencies {
     implementation("dev.galasa:gson:2.8.5")
 }
 
-test {
-    useTestNG()
+task testGroups (type: Test) {
+    useTestNG{
+        suites 'src/test/resources/testng-groups.xml'
+    }
+}
+
+task testContacts (type: Test) {
+    useTestNG{
+        suites 'src/test/resources/testng-contacts.xml'
+    }
 }
